# slay

./: CMakeLists.txt  methods_results.csv  symmetric_acceleration_results.csv
cmake/: src_include.cmake  test_ut.cmake  tests_utils.cmake
include/matrix/: csr_matrix.hpp  plot_matrix.hpp  poisson_generator.hpp
include/methods/: chebyshev_acceleration.hpp  conjugate_gradient.hpp  gauss_seidel.hpp  gmres.hpp  householder_alg.hpp  iterative_result.hpp  jacobi.hpp  progonka.hpp  simple_iteration.hpp  sor.hpp  steepest_descent.hpp  symmetric_chebyshev_acceleration.hpp  symmetric_gauss_seidel.hpp
include/vector/: operations_vector.hpp
src/matrix/: csr_matrix.cpp  plot_matrix.cpp  poisson_generator.cpp
src/methods/: chebyshev_acceleration.cpp  conjugate_gradient.cpp  gauss_seidel.cpp  gmres.cpp  householder_alg.cpp  jacobi.cpp  progonka.cpp  simple_iteration.cpp  sor.cpp  steepest_descent.cpp  symmetrci_chebyshev_acceleration.cpp  symmetric_chebyshev_acceleration.cpp  symmetric_gauss_seidel.cpp
src/vector/: operations_vector.cpp
task_1/: progonka.cpp
task_2/: csr_matrix.cpp  operations_vector.cpp  plotnaya_matrix.cpp  testing.cpp
task_3/: householder_alg.cpp
tests/: ut_test.cpp
tests/methods/: plot_methods.py  plot_symmetric_acceleration.py  symmetric_acceleration_test.hpp
tests/utils/: ut_test.cpp
tests/utils/methods/: methods_runner.hpp  symmetric_acceleration_main.cpp  symmetric_acceleration_test.hpp
